# snic-rs

./: .gitignore  Cargo.toml  book.toml  plot_circular.py  plot_spectral.py  pyproject.toml  wiki.md
snic_core/: Cargo.toml
snic_core/src/: common_types.rs  lib.rs
snic_core/src/network/: comparison.rs  matchup.rs  mod.rs  rank.rs
snic_core/tests/: network_building_test.rs  test_graph.rs
src/: common_utilities.rs  lib.rs  main.rs
src/gber/: mod.rs
src/network/: mod.rs  rank.rs
tests/: network_building_test.rs
wiki/: SUMMARY.md  future_directions.md  gber.md  glossary.md  key_properties.md  network_structure.md  operational_flow.md  practical_considerations.md  snic.md  theoretical_aspects.md
