[package]
name = "snic"
version = "0.1.0"
edition = "2021"

[lib]
name = "snic"
crate-type = ["cdylib", "rlib"]

[dependencies]
graph = "0.3.1"

# [dependencies]
# pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
[dependencies.pyo3]
version = "0.22.2"

[features]
abi3-py38 = ["pyo3/abi3-py38"]
extension-module = ["pyo3/extension-module"]
# default = ["extension-module", "abi3-py38"]
