[build-system]
requires = ["maturin>=1.7.0,<2.0"]
build-backend = "maturin"

[project]
name = "snic"
version = "0.1.0"
# description = "High-performance library for rendering MIDI files to WAV and Opus formats using SoundFonts"
authors = [
    {name = "Arthur Ryzhak", email = "ryzhakar@gmail.com"},
]
# readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
# classifiers = [
#     # "Development Status :: 4 - Beta",
#     "Intended Audience :: Developers",
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python :: 3 :: Only",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: 3.11",
#     "Programming Language :: Python :: 3.12",
#     "Programming Language :: Python :: Implementation :: CPython",
#     "Programming Language :: Python :: Implementation :: PyPy",
#     "Programming Language :: Rust",
#     "Topic :: Multimedia :: Sound/Audio :: MIDI",
#     "Topic :: Multimedia :: Sound/Audio :: Conversion",
# ]
# keywords = ["midi", "audio", "soundfont", "wav", "opus"]

# [project.urls]
# Homepage = "https://github.com/ryzhakar/midirenderer"
# Repository = "https://github.com/ryzhakar/midirenderer.git"
# "Bug Tracker" = "https://github.com/ryzhakar/midirenderer/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
# module-name = "midirenderer"
# python-source = "python"

